--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -4,6 +4,17 @@
   padding: 0;
 }
 
+html {
+  font-size: 16px;
+}
+
+@media (orientation: landscape) and (max-width: 812px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+
 body {
   background: #fff;
   background: linear-gradient(180deg, rgba(120, 144, 159, 0) 30%, rgba(111, 111, 143, 0.56) 100%);
@@ -13,7 +24,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  font-size: $base-font-size;
   z-index: 1;
 }
 
