--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,3 @@ $hover-col: #b37a12;
 $flash-col: #19ff85;
 $opposite-col: #004fb3;
 $opposite-light-col: #0070ff;
-$base-font-size: 16px;
